# som_final_project

./: .gitignore  CMakeLists.txt
rawmodel/: vase_dist.inf
src/: CMakeLists.txt
src/libraw/: CMakeLists.txt  RAWmodel.cpp
src/libraw/include/: BoundingVoxels.h  RAWmodel.h  SurfaceVoxels.h
src/libsom/: CMakeLists.txt  SOM.cpp
src/libsom/include/: SOM.h
src/som_demo/: CMakeLists.txt  Drawmodel.cpp  Gui.cpp  Math.cpp  carve.cpp  main.cpp  textureMap.cpp  transfer_function_widget.cc  world.cpp
src/som_demo/include/: Drawmodel.h  Gui.h  Math.h  Vertex.h  camera.h  carve.h  item.h  textureMap.h  transfer_function_widget.h  world.h
src/som_demo/shader/: depthdebug.vs  rayShader.fs  rayShader.vs  shader.fs  shader.vs
